--- a/desafio.html
+++ b/desafio.html
@@ -11,18 +11,18 @@
     <title>Desafio-1</title>
 </head>
 
-<body>
+<body width="300px" heigth="200px">
     <h1>Carrossel Git</h1>
     <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="image/default.png" class="d-block w-100" alt="...">
+                <img src="image/img1.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="image/default.png" class="d-block w-100" alt="...">
+                <img src="image/img2.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="image/default.png" class="d-block w-100" alt="...">
+                <img src="image/img3.png" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
