--- a/desafio.html
+++ b/desafio.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" 
         rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" 
         crossorigin="anonymous">
     <title>Desafio-1</title>
 </head>
 
-<body width="300px" heigth="200px">
+<body style="background-color: rgb(199, 88, 14);">
     <h1>Carrossel Git</h1>
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
+    <div id="carouselExample" class="carousel slide" style="width: 80%;">
+        <div class="carousel-inner" >
             <div class="carousel-item active">
                 <img src="image/img1.png" class="d-block w-100" alt="...">
             </div>
